--- a/ProcessFiles/ProcessFiles.csproj
+++ b/ProcessFiles/ProcessFiles.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{DF49DC7D-8427-4BC3-84EC-3D41640124CF}</ProjectGuid>
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FileIO</RootNamespace>
-    <AssemblyName>FileIO</AssemblyName>
+    <RootNamespace>ProcessFiles</RootNamespace>
+    <AssemblyName>ProcessFiles</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -94,7 +94,7 @@
       <DependentUpon>FileBrowse.xaml</DependentUpon>
     </Compile>
     <Compile Include="FileBrowseViewModel.cs" />
-    <Compile Include="FileIoApp.cs" />
+    <Compile Include="ProcessFilesApp.cs" />
     <Compile Include="IApp.cs" />
     <Compile Include="IBrowseForFiles.cs" />
     <Compile Include="IoWindow.xaml.cs">
@@ -106,7 +106,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IoAppViewModel.cs" />
+    <Compile Include="IoWindowViewModel.cs" />
     <Compile Include="PercentageConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
