More descriptive error handling
Present errors to the user.
Also handle a few more cases.

--- a/ProcessFiles/ProcessFiles.csproj
+++ b/ProcessFiles/ProcessFiles.csproj
@@ -94,6 +94,9 @@
       <DependentUpon>FileBrowse.xaml</DependentUpon>
     </Compile>
     <Compile Include="FileBrowseViewModel.cs" />
+    <Compile Include="InputFileBrowseViewModel.cs" />
+    <Compile Include="IsNullToVisibilityConverter.cs" />
+    <Compile Include="OutputFileBrowseViewModel.cs" />
     <Compile Include="ProcessFilesApp.cs" />
     <Compile Include="IApp.cs" />
     <Compile Include="IBrowseForFiles.cs" />
