--- a/ProcessFiles/ProcessFiles.nuspec
+++ b/ProcessFiles/ProcessFiles.nuspec
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package >
+<package>
   <metadata>
     <id>$id$</id>
     <version>$version$</version>
@@ -15,5 +15,11 @@
       <dependency id="Splat" version="1.6.2" />
       <dependency id="reactiveui-core" version="6.5.0" />
     </dependencies>
+    <frameworkAssemblies>
+      <frameworkAssembly assemblyName="PresentationFramework" targetFramework="net452"/>
+    </frameworkAssemblies>
   </metadata>
+  <files>
+  <file src="readme.txt" target=""/>
+  </files>
 </package>
